github-comments/service-a.yaml
##################################################################################################
# service-a
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: service-a
  labels:
    app: service-a
    service: service-a
spec:
  ports:
  - port: 10001
    name: http
  selector:
    app: service-a
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a-v1
  labels:
    app: service-a
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
      version: v1
  template:
    metadata:
      labels:
        app: service-a
        version: v1
    spec:
      serviceAccountName: demo-service-a
      containers:
      - name: service-a
        image: kkk2099/kkk:service-a-1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 10001
        resources:
          requests:
            memory: "1.5Gi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a-v2
  labels:
    app: service-a
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
      version: v2
  template:
    metadata:
      labels:
        app: service-a
        version: v2
    spec:
      serviceAccountName: demo-service-a
      containers:
      - name: service-a
        image: kkk2099/kkk:service-a-1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 10001
        resources:
          requests:
            memory: "1.5Gi"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: service-a
spec:
  hosts:
  - service-a
  http:
  - match:
    - headers:
        baggage:
          regex: ".*x-api-version=v2.*"
    route:
    - destination:
        host: service-a
        subset: v2
  - route:
    - destination:
        host: service-a
        subset: v1
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: service-a
spec:
  host: service-a
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
